@@ -10,6 +10,7 @@ dependencies:
   module:
     - image
     - node
+    - products
     - text
 id: product_products
 label: Products
@@ -807,7 +808,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div id=\"product-link-button>\r\n<ul class=\"action-links\">\r\n<li>\r\n<a href=\"products\" class=\"button buton-action button--primary button--small\" data-drupal-link-system-path=\"products\">&lt; Continue shopping</a>\r\n</li>\r\n</ul>\r\n</div>"
+            text: "<div id=\"product-link-button>\r\n<ul class=\"action-links\">\r\n<li>\r\n<a href=\"/marketplace/products\" class=\"button buton-action button--primary button--small\" data-drupal-link-system-path=\"/marketplace/products\">&lt; Continue shopping</a>\r\n</li>\r\n</ul>\r\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -1172,6 +1173,56 @@ display:
           empty_zero: false
           hide_alter_empty: false
           plugin_id: custom
+        add_remove_views_field:
+          id: add_remove_views_field
+          table: views
+          field: add_remove_views_field
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: false
+          select_field: nid
+          plugin_id: add_remove_views_field
       defaults:
         fields: false
       display_description: 'View to watch a grid of 9 products per page'
