@@ -13,4 +13,5 @@ dependencies:
   - user
   - views
 version: 8.x-1.0
-package: 'Marketplace'
+package: Marketplace
+core_incompatible: false
