@@ -1,0 +1,46 @@
+<?php
+
+/**
+ * @file
+ * Contains products.module.
+ */
+
+use Drupal\Core\Routing\RouteMatchInterface;
+
+/**
+ * Implements hook_help().
+ */
+function products_help($route_name, RouteMatchInterface $route_match) {
+  switch ($route_name) {
+    // Main module help for the products module.
+    case 'help.page.productos':
+      $output = '';
+      $output .= '<h3>' . t('About') . '</h3>';
+      $output .= '<p>' . t('Módulo para gestión de productos') . '</p>';
+      return $output;
+
+    default:
+  }
+}
+
+/**
+ * Implements hook_theme().
+ */
+function products_theme() {
+  return [
+    'products' => [
+      'render element' => 'children',
+    ],
+  ];
+}
+
+function products_preprocess_page(&$variables) {
+  $variables['page']['#cache']['contexts'][] = 'route';
+  $route = [
+    "view.product_products.page_products",
+    "view.product_products.page_product_unitary",
+  ];
+  if (in_array(\Drupal::routeMatch()->getRouteName(), $route)) {
+    $variables['#attached']['library'][] = 'products/products_cookies';
+  }
+}
