@@ -4,3 +4,6 @@ Products 8.x-1.0, 2020-05-21
 - (abel-santos) - 5/21/2020 - Initial Release of this document.
                               Improve info.yml.
                               Add README.md.
+- (abel-santos) - 5/23/2020 - Add plugin views field to manage checkbox field
+                              for products.
+                              Add dependency to external library of cookie.js.
